src/test/scala/wacc/wacc_examples/invalid/syntaxErr/classes/methodBadlyNamed.wacc
# program has invalid method name - return type and name are conflated

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    class MyClass {
        int x

        intgetX() is
            return x 
        end

    }
    skip
end